--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,11 +6,15 @@
 body, html {
     height: 100%;
     margin: 0 auto;
+    
 }
 
 body {
     font-family: 'Montserrat';
     font-size: 18px;
+    background: linear-gradient(#c9e1e0, #fff) no-repeat;
+    background-repeat: no-repeat;
+    background-position: center;    
 }
 
 a {
