--- a/src/app/draw/draw.component.html
+++ b/src/app/draw/draw.component.html
@@ -19,11 +19,11 @@
   </form>
 
   <ngx-spinner
-    bdColor="rgba(0,103,62, 1)"
+    bdColor="rgba(0,167,88, 1)"
     size="large"
     color="#ff0000"
     type="square-jelly-box">
-    <p style="font-size: 20px; color: white">Loading...</p>
+    <p style="font-size: 20px; color: white">The winner is ...</p>
   </ngx-spinner>
 
   <br/> <br />
