--- a/src/app/draw/draw.component.html
+++ b/src/app/draw/draw.component.html
@@ -23,7 +23,7 @@
     size="large"
     color="#ff0000"
     type="square-jelly-box">
-    <p style="font-size: 20px; color: white">The winner is ...</p>
+    <p style="font-size: 20px; color: white">The lucky person is ...</p>
   </ngx-spinner>
 
   <br/> <br />
